extracted, gap, color sub fixed!

--- a/css/style.default.css
+++ b/css/style.default.css
@@ -371,77 +371,6 @@ section header {
 *     NAVBAR
 * ==========================================================
 */
-nav.navbar {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  -webkit-box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
-  box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1);
-  background: #fff;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-}
-
-nav.navbar .navbar-brand {
-  font-weight: 800;
-  font-size: 1.7rem;
-  color: #222;
-}
-
-nav.navbar a.nav-link {
-  color: #333;
-  font-size: 1.1rem;
-}
-
-nav.navbar a.nav-link:hover,
-nav.navbar a.nav-link.active {
-  color: #5989e5;
-}
-
-nav.navbar .navbar-btn {
-  margin-left: 15px;
-}
-
-nav.navbar .navbar-toggler {
-  outline: none;
-}
-
-nav.navbar .navbar-toggler span {
-  width: 25px;
-  margin: 5px;
-  display: block;
-  height: 2px;
-  background: #333;
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
-}
-
-nav.navbar .navbar-toggler.active span:first-of-type {
-  -webkit-transform: rotate(45deg) translate(10px);
-  transform: rotate(45deg) translate(10px);
-}
-
-nav.navbar .navbar-toggler.active span:last-of-type {
-  -webkit-transform: rotate(-45deg) translate(10px);
-  transform: rotate(-45deg) translate(10px);
-}
-
-nav.navbar .navbar-toggler.active span:nth-of-type(2) {
-  opacity: 0;
-}
-
-/* Navbar Mediaquery ----------------------------------- */
-@media (max-width: 1199px) {
-  nav.navbar .navbar-btn {
-    margin-left: 0;
-  }
-}
-
-@media (min-width: 992px) {
-  nav.navbar {
-    padding-left: 3rem;
-    padding-right: 3rem;
-  }
-}
 
 /*
 * ==========================================================
@@ -735,9 +664,11 @@ section.newsletter .form-group .submit {
 }
 
 /*
-* ==========================================================
-*     FOOTER
-* ==========================================================
+
+==========================================================
+  FOOTER
+==========================================================
+
 */
 footer.main-footer {
   padding: 150px 0 0;
@@ -781,7 +712,7 @@ footer.main-footer ul.links a {
 }
 
 footer.main-footer ul.links a:hover {
-  color: #5989e5;
+  color: #e5a859;
 }
 
 footer.main-footer ul.social-icons {
